<resources>
    <string name="createNew">Create new account or log into existing account.</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="usernameExists">Username already exists. Choose another name or log in.</string>
    <string name="isEmpty">Please enter a username and password.</string>
    <string name="passCorrect">Password is correct.</string>
    <string name="passWrong">Password is incorrect.</string>
    <string name="noMoreLives">You don\'t have anymore lives. Please start new game.</string>
    <string name="app_name">Overcooked</string>
    <string name="backToMainMenu">Back To Main Menu</string>
    <string name="congratulations">CONGRATULATIONS!</string>
    <string name="Fail">GAME OVER!</string>
    <string name="Success">CONGRATULATIONS!</string>
    <string name="mainmenucus">Main Menu Apron:</string>
    <string name="L1BGcus">Level 1 Background:</string>
    <string name="L2BGcus">Level 2 Background:</string>
    <string name="L2Diffcus">Level 2 Difficulty:</string>
    <string name="L3BG">Level 3 Background:</string>
    <string name="L3PL">Level 3 Player:</string>
    <string name="L3DIFF">Level 3 Difficulty:</string>
    <string name="noLives">You ran out of lives.</string>
    <string name="returnToMain">RETURN TO MAIN MENU</string>
    <string name="restart_this_level">Restart this Level</string>
    <string name="restart_level_two">Restart Level Two</string>
    <string name="Level_Three">Start Level Three</string>
    <string name="easy">Easy</string>
    <string name="grass">Grassland</string>
    <string name="hard">Hard</string>
    <string name="level_hardness">Choose Difficulty</string>
    <string name="medium">Medium</string>
    <string name="sky">Sky</string>
    <string name="star">Tableware</string>
    <string name="background_choose">Choose Background</string>
    <string name="start_level_two">I am Sure!</string>
    <string name="kitchen">Kitchen</string>
    <string name="main_menu_background">main menu background</string>
    <string name="BonusLevel2">Bonus Level Two</string>
    <string name="instruction">INSTRUCTION</string>
    <string name="instructionNoticeContent">This is a bonus level. If you win the game you will get one extra life (if you have less than 3 lives now). But if you lose the game, you have to restart the game from level one!</string>
    <string name="instructionNotice">Notice:</string>
    <string name="instructionContent">In this Bonus level, differents ingredients will be treated differently. The cabbage and tomato must fall on the left base, beef and cheese must fall on the right base but the bread must be dropped. The speed of flying ingredients will change during the game. Good luck!</string>
    <string name="CustomizeBonusLevel">Customize My Bonus Level</string>
    <string name="StartBonusLevel">Start Bonus Level</string>
    <string name="levelPassed">You have passed this level.</string>
    <string name="bonusLevel">BONUS LEVEL</string>
    <string name="advanceToNextLevel">ADVANCE TO NEXT LEVEL</string>
    <string name="returnToMainMenu">RETURN TO MAIN MENU</string>
</resources>
