<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background1"
    tools:context="LevelTwo.LevelTwoSuccessActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="95dp"
        android:layout_marginTop="130dp"
        android:layout_marginEnd="95dp"
        android:layout_marginBottom="492dp"
        android:fontFamily="@font/fredoka_one"
        android:text="@string/congratulations"
        android:textColor="#FFFFFF"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.189" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="95dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="95dp"
        android:layout_marginBottom="379dp"
        android:fontFamily="@font/fredoka_one"
        android:text="@string/levelPassed"
        android:textColor="#FFFFFF"
        android:textSize="23sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/btn_rounded"
        android:fontFamily="@font/fredoka_one"
        android:onClick="goToLevelThree"
        android:paddingLeft="11pt"
        android:paddingTop="5pt"
        android:paddingRight="11pt"
        android:paddingBottom="5pt"
        android:text="@string/advanceToNextLevel"
        android:textColor="#9A7EE6"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.62" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/btn_rounded"
        android:fontFamily="@font/fredoka_one"
        android:onClick="backToMainMenu"
        android:paddingLeft="11pt"
        android:paddingTop="5pt"
        android:paddingRight="11pt"
        android:paddingBottom="5pt"
        android:text="@string/returnToMainMenu"
        android:textColor="#9A7EE6"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.754" />

    <Button
        android:id="@+id/button9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_rounded"
        android:fontFamily="@font/fredoka_one"
        android:onClick="navigateBonus"
        android:paddingLeft="11pt"
        android:paddingTop="5pt"
        android:paddingRight="11pt"
        android:paddingBottom="5pt"
        android:text="@string/bonusLevel"
        android:textColor="#9A7EE6"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.408" />
</androidx.constraintlayout.widget.ConstraintLayout>