<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background1"
    tools:context=".GeneralSuccessActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="95dp"
        android:layout_marginTop="184dp"
        android:layout_marginEnd="95dp"
        android:layout_marginBottom="492dp"
        android:fontFamily="@font/fredoka_one"
        android:text="@string/Success"
        android:textColor="#FFFFFF"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="95dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="95dp"
        android:layout_marginBottom="379dp"
        android:fontFamily="@font/fredoka_one"
        android:text="@string/levelPassed"
        android:textColor="#FFFFFF"
        android:textSize="23sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/nextLevelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="114dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="280dp"
        android:background="@drawable/btn_rounded"
        android:fontFamily="@font/fredoka_one"
        android:paddingLeft="11pt"
        android:paddingTop="5pt"
        android:paddingRight="11pt"
        android:paddingBottom="5pt"
        android:text="@string/advanceToNextLevel"
        android:textColor="#9A7EE6"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <Button
        android:id="@+id/mainMenuButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="196dp"
        android:background="@drawable/btn_rounded"
        android:fontFamily="@font/fredoka_one"
        android:paddingLeft="11pt"
        android:paddingTop="5pt"
        android:paddingRight="11pt"
        android:paddingBottom="5pt"
        android:text="@string/returnToMainMenu"
        android:textColor="#9A7EE6"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>